--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,6 +34,7 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    z-index: 1;
 }
 
 .accordion-button:not(.collapsed){
